fix scrollbars bugs

--- a/frontend/web/css/component.css
+++ b/frontend/web/css/component.css
@@ -5,13 +5,12 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-html, body, .container, .scroller {
+html, body, .container, .scroller, .project-container {
     height: 100%;
 }
 
 .scroller {
-    overflow-y: scroll;
+   /*overflow-y: scroll;*/
 }
 
 .scroller,
@@ -360,8 +359,7 @@ html, body, .container, .scroller {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-    padding: 20px 0;
-    min-height: 600px;
+    overflow: hidden;
 }
 
 .browser-header {
@@ -370,6 +368,7 @@ html, body, .container, .scroller {
     background: #fff;
     text-align: center;
     position: relative;
+    border-bottom: 1px solid #ccc;
 }
 .dot {
     display: block;
@@ -394,13 +393,19 @@ html, body, .container, .scroller {
     border: 0;
     display: inline-block;
     width: 300px;
-    height: 40px;
+    height: 39px;
     text-align: center;
-    font: 700 16px/40px arial;
+    font: 700 16px/39px arial;
     color: #555;
 }
 .canvas {
     background: rgba(255, 255, 255, .4);
     width: 100%;
     min-height: 400px;
+}
+
+
+/* fix scrollbar bug */
+.project-container .ps-scrollbar-y-rail {
+    top: 0 !important;
 }
